fixed problem on current conditions page where text would shift depending on the last received timer. I also fixed an issue where the certificate page would not exist if a certificate scan was not found. It will now at least show the certificate data

--- a/world.css
+++ b/world.css
@@ -191,6 +191,7 @@ th{
 	display:inline-block;
 	padding: 20px;
  	border-radius: 25px;
+	min-width: 15%;
 }
 
 .speedBlock{
@@ -199,7 +200,7 @@ th{
 	display:inline-block;
 	padding: 20px;
  	border-radius: 25px;
-
+	
 }
 .battBlock{
 	cursor: pointer;
